versal congig and next config check

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
+    "version": 2,
     "builds": [
       {
         "src": "next.config.js",
         "use": "@vercel/next"
       }
     ],
-    "outputDirectory": ".next"
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/$1"
+      }
+    ]
   }
   
