--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build", 
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@next/font": "^14.2.4",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@tabler/icons-react": "^3.6.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.11",
+    "framer-motion": "^11.2.12",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
+    "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
