--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next/font": "^14.2.4",
     "@radix-ui/react-hover-card": "^1.1.1",
+    "@react-three/drei": "^9.107.3",
+    "@react-three/fiber": "^8.16.8",
     "@tabler/icons-react": "^3.6.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
@@ -18,10 +20,12 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "qss": "^3.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "three": "^0.166.0",
+    "three-globe": "^2.31.1"
   },
   "devDependencies": {
     "@types/node": "^20",
